test/fixtures/source-map/output/source_map_eval.snapshot
node:internal*modules*cjs*loader:1085
  throw err;
  ^

Error: Cannot find module '../..*common'
Require stack:
- *output*source_map_eval.js
    at Module._resolveFilename (node:internal*modules*cjs*loader:1082:15)
    at Module._load (node:internal*modules*cjs*loader:928:27)
    at Module.require (node:internal*modules*cjs*loader:1149:19)
    at require (node:internal*modules*helpers:121:18)
    at Object.<anonymous> (*output*source_map_eval.js:4:1)
    at Module._compile (node:internal*modules*cjs*loader:1267:14)
    at Module._extensions..js (node:internal*modules*cjs*loader:1321:10)
    at Module.load (node:internal*modules*cjs*loader:1125:32)
    at Module._load (node:internal*modules*cjs*loader:965:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal*modules*run_main:83:12) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    '*output*source_map_eval.js'
  ]
}

Node.js *
